@@ -1,3 +1,8 @@
+Thu Oct 13 19:41:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (copy_stream_body): use IO to write to copy to duplex IO.
+	  http://twitter.com/knu/status/786505317974585344
+
 Thu Oct 13 17:05:57 2016  Dwain Faithfull  <dwfaithfull@gmail.com>
 
 	* hash.c (rb_hash_compact, rb_hash_compact_bang): Removes nil
